syntax="proto3";

package service;

option go_package = "github.com/BlockchainZoo/spinechain-api-prototype/backend/schema/service";

import "model/account.proto";
import "model/empty.proto";

// AccountService represent request on Account
service AccountService {
    rpc GetAccounts(model.Empty) returns (model.GetAccountsResponse) {}
    rpc GetAccountByPublicKey(model.GetAccountByPublicKeyRequest) returns (model.Account) {}
}
