syntax="proto3";

package service;

option go_package = "github.com/BlockchainZoo/spinechain-api-prototype/backend/schema/service";

import "model/accountBalance.proto";
import "model/empty.proto";

// AccountBalanceService represent request on Account Balance
service AccountBalancesService {
    rpc GetAccountBalances(model.Empty) returns (model.GetAccountBalancesResponse) {}
    rpc GetAccountBalance(model.GetAccountBalanceRequest) returns (model.AccountBalance) {}
}
